--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,3 +1,38 @@
 p {
     align-self: center;
   }
+
+
+  @media print{
+    body {
+      margin-top: 0;
+  }
+    @page{
+      /* 直向列印 */
+      size: portrait;
+    }
+    .funZone{
+      display: none;
+    }
+    .container{
+      transform: scale(0.7);
+      padding: 0;
+      margin: 0;
+    }
+    .form-title, .form-name{
+      transform: scale(0.8);
+    }
+  }
+  .btn-logo{
+    width: 60px;
+    height: 38px;
+    background-color: #323296;
+    color: #ffffff;
+  }
+  .btn-logo:hover{
+    width: 60px;
+    height: 38px;
+    background-color: #323296;
+    color: #ffffff;
+    opacity: .8;
+  }
